gcc-14.2.0/gcc/testsuite/gdc.test/compilable/issue16472.d
version https://git-lfs.github.com/spec/v1
oid sha256:30e0abf7aa97e4177340d5c415f0f859e758ff974d8c83d3544dd7cff31bfe3b
size 830
